--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -19,68 +19,82 @@
 <body class="body fw-400">
   <main>
     <section class="hero">
-      <div class="container hero-cont">
-        <!-- <header class="hero-header">
+      <div class="hero-cont">
+        <div class="hero-header">
           <img src="./assets/image/header-logo.svg" alt="Huddle company name" class="hero-logo">
-          <button type="button" class="try-btn btn fw-700">Try It Free</button>
-        </header>
-        <div class="hero-body">
-          <h1 class="hero-ttl ff-heading fw-600">Build The Community Your Fans Will Love</h1>
-          <p class="hero-desc">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-          <button type="button" class="start-btn btn fw-700">Get Started For Free</button>
+          <button type="button" class="try-btn btn">Try It Free</button>
         </div>
-        <div class="hero-illus">
-          <img src="./assets/image/illustration-mockups.svg" alt="">
-        </div> -->
+        <div class="hero-body">
+          <div class="hero-illus">
+            <img src="./assets/image/illustration-mockups.svg" alt="">
+          </div>
+          <div class="hero-intro">
+            <h1 class="hero-ttl">Build The Community Your Fans Will Love</h1>
+            <p class="hero-desc">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+            <button type="button" class="get-btn btn">Get Started For Free</button>
+          </div>
+        </div>
       </div>
     </section>
 
-    <div>
-      <div class="container card-wrap">
-        <section class="card">
-          <img src="./assets/image/illustration-grow-together.svg" alt="" class="card-illus card-illus--grow">
-          <h2 class="card-ttl ff-heading fw-600">Grow Together</h2>
-          <p class="card-desc">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
-          </p>
+    <div class="cards">
+      <div class="card-cont">
+        <section class="card card--reverse">
+          <div class="card-illus">
+            <img src="./assets/image/illustration-grow-together.svg" alt="" >
+          </div>
+          <div class="card-body">
+            <h2 class="card-ttl">Grow Together</h2>
+            <p class="card-desc">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+            </p>
+          </div>
         </section>
         <section class="card">
-          <img src="./assets/image/illustration-flowing-conversation.svg" alt="" class="card-illus">
-          <h2 class="card-ttl ff-heading fw-600">Flowing Conversations</h2>
-          <p class="card-desc">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
-          </p>
+          <div class="card-illus">
+            <img src="./assets/image/illustration-flowing-conversation.svg" alt="">
+          </div>
+          <div class="card-body">
+            <h2 class="card-ttl">Flowing Conversations</h2>
+            <p class="card-desc">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+            </p>
+          </div>
         </section>
-        <section class="card">
-          <img src="./assets/image/illustration-your-users.svg" alt="" class="card-illus">
-          <h2 class="card-ttl ff-heading fw-600">Your Users</h2>
-          <p class="card-desc">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
-          </p>
+        <section class="card card--reverse">
+          <div class="card-illus">
+            <img src="./assets/image/illustration-your-users.svg" alt="">
+          </div>
+          <div class="card-body">
+            <h2 class="card-ttl">Your Users</h2>
+            <p class="card-desc">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+            </p>
+          </div>
         </section>
       </div>
 
-      <div class="card--community">
-        <h3 class="community-ttl ff-heading fw-600">Ready To Build Your Community?</h3>
-        <button type="button" class="start-btn btn fw-700">Get Started For Free</button>
+      <div class="card-question">
+        <h3 class="card-question-ttl">Ready To Build Your Community?</h3>
+        <button type="button" class="get-btn get-btn--question btn">Get Started For Free</button>
       </div>
     </div>
   </main>
 
   <footer class="footer">
-    <div class="container">
-      <img src="./assets/image/footer-logo.svg" alt="Huddle company name">
+    <div class="footer-cont">
+      <img class="footer-logo" src="./assets/image/footer-logo.svg" alt="Huddle company name">
 
       <address class="address">
-        <a href="#">
+        <p class="address-item">
           <img src="./assets/icon/icon-location.svg" alt="" aria-hidden="true">
-          Lorem ipsum dolor sit amet, consectetur dipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-        </a>
-        <a href="#">
+          <a href="#" class="address-cta">Lorem ipsum dolor sit amet, consectetur dipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</a>
+        </p>
+        <p class="address-item">
           <img src="./assets/icon/icon-phone.svg" alt="" aria-hidden="true">
-          +1-543-123-4567
-        </a>
-        <a href="#">
+          <a href="#" class="address-cta">+1-543-123-4567</a>
+        </p>
+        <p class="address-item">
           <img src="./assets/icon/icon-email.svg" alt="" aria-hidden="true">
-          example@huddle.com
-        </a>
+          <a href="#" class="address-cta">example@huddle.com</a>
+        </p>
       </address>
 
       <nav class="menu">
