--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Huddle</title>
+    <!-- HTML Meta Tags -->
+  <title>Huddle Landing with blocks</title>
+  <meta name="title" content="Huddle Landing with blocks" />
+  <meta name="author" content="VIMP">
+  <meta name="description" content="This challenge is perfect if you're wanting to practice your layout skills. If you're starting to get a bit more confident laying out a web page, give this project a go.">
+  <meta name="keywords" content="Frontend Mentor Challenges,Newbie challenges">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Huddle Landing with blocks">
+  <meta property="og:site_name" content="Huddle Landing with blocks">
+  <meta property="og:description" content="This challenge is perfect if you're wanting to practice your layout skills. If you're starting to get a bit more confident laying out a web page, give this project a go.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mendezpvi/fm-huddle-with-blocks/main/assets/screenshot/thumbnail.png">
+  <meta property="og:url" content="https://mendezpvi.github.io/fm-huddle-with-blocks/">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Huddle Landing with blocks">
+  <meta name="twitter:description" content="This challenge is perfect if you're wanting to practice your layout skills. If you're starting to get a bit more confident laying out a web page, give this project a go.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/mendezpvi/fm-huddle-with-blocks/main/assets/screenshot/thumbnail.png">
+  <meta name="twitter:domain" content="mendezpvi.github.io">
+  <meta name="twitter:url" content="https://mendezpvi.github.io/fm-huddle-with-blocks/">
 
   <link rel="icon" href="./assets/icon/favicon-32x32.png">
   <link rel="apple-touch-icon" href="./assets/icon/favicon-32x32.png">
